--- a/package.json
+++ b/package.json
@@ -4,14 +4,17 @@
   "description": "Node/Lambda based app which makes calls to National Weather service and simplifies responses to optimize data for Arduino processing",
   "main": "src/server.js",
   "dependencies": {
+    "aws-serverless-express": "^3.4.0",
     "express": "^4.18.2",
     "node-fetch": "^3.3.0",
     "nodemon": "^2.0.20"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "serverless": "^3.26.0"
+  },
   "scripts": {
-    "dev": "nodemon src/server.cjs",
-    "start": "src/server.js"
+    "dev": "nodemon local.js",
+    "deploy": "serverless deploy"
   },
   "repository": {
     "type": "git",
@@ -24,7 +27,7 @@
   },
   "homepage": "https://github.com/mstudio/arduino-weather-api#readme",
   "engines": {
-    "node": "14.x",
+    "node": "16.x",
     "npm": "7.x"
   }
 }
